--- a/da/public/index.html
+++ b/da/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
-    <title>React App</title>
+    <title>CGV</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
